- Added placeholder model + Animations - Disbaled camera collision - Blink moves instead of teleports - Infinity point can now effect more than one enemy - Target locking fixed - Add blink lock actors - Character values changed - Fixed enemies not dying after being attacked - Enemy collsions disabled after death

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Shatter
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Shatter_Main_Map.Shatter_Main_Map
+EditorStartupMap=/Game/Maps/Mechanic_Showcase.Mechanic_Showcase
 GameDefaultMap=/Game/Maps/Shatter_Main_Map.Shatter_Main_Map
 TransitionMap=
 bUseSplitscreen=True
@@ -65,5 +65,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
